# clt-bot

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/bolao/: admin.py  apps.py  models.py  urls.py  views.py
backend/bolao/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py  views.py
backend/users/: constants.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/services/: habbo.py  verification_words.py
bot/: .dockerignore  Dockerfile  pyproject.toml
bot/cltbot/: __init__.py  __main__.py  app.py  config.py  members.py
bot/cltbot/bolao/: __init__.py  api.py  commands.py  constants.py  embeds.py  models.py  parsing.py  permissions.py  ui.py
bot/cltbot/verification/: __init__.py  service.py
